dhall/tests/type-inference/failure/unit/LetWithWrongAnnotation.txt
Type error: error: annot mismatch: Bool != Natural
 --> <current file>:1:18
  |
1 | let x : Natural = True in True
  |                   ^^^^ annot mismatch: Bool != Natural
  |
